Got both directional arrows working and fixed the row overlap issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@ strong {
 }
 
 .tile-wrapper {
-    height: 780px;
+    min-height: 780px;
     position: relative;
     /*left: 30%;*/
     /*opacity: 0.2;*/
